--- a/client/src/components/Navigation/Navigation.module.scss
+++ b/client/src/components/Navigation/Navigation.module.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
+  border-bottom: 1px solid #ccc;
 
   &Logo {
     height: 80%;
